# ae108-mirror

./: .clang-format  .gitignore  .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  LICENSE  README.md  docker-compose.yml  euler.sh  timoshenko_beam.ae108
assembly/src/: AssembleConsistentMassMatrixPlugin.cc  AssembleEnergyPlugin.cc  AssembleForceIfPlugin.cc  AssembleForceVectorPlugin.cc  AssembleLumpedMassMatrixPlugin.cc  AssembleMassMatrixPlugin.cc  AssembleStiffnessMatrixPlugin.cc  Assembler.cc  AssemblerGroup.cc  AssemblerTypeTraits.cc  CMakeLists.txt  ConcatenateFeaturePlugins.cc  DefaultFeaturePlugins.cc  DerivePluginsUniquely.cc  DeriveUniquely.cc  FeaturePlugin.cc  FeaturePlugins.cc  HasUniqueTypeTrait.cc  IsSingleUniqueType.cc  StaticLooper.cc  UpdateInternalVariablesPlugin.cc  deserialize.cc  groupElementDataPerVertex.cc  resizeIfPossible.cc  serialize.cc
assembly/test/: AssemblerGroup_Test.cc  Assembler_Test.cc  CMakeLists.txt  ConcatenateFeaturePlugins_Test.cc  DerivePluginsUniquely_Test.cc  DeriveUniquely_Test.cc  FeaturePlugin_Test.cc  HasUniqueTypeTrait_Test.cc  IsSingleTypeTrait_Test.cc  StaticLooper_Test.cc  deserialize_Test.cc  resizeIfPossible_Test.cc  serialize_Test.cc
cmdline/src/: CMakeLists.txt  CommandLineOptionParser.cc  README.rst
cpppetsc/src/: CMakeLists.txt  Context.cc  Exception.cc  GeneralizedMeshBoundaryConditition.cc  IndexBasedAccessIterator.cc  InvalidParametersException.cc  IteratorRange.cc  LeastSquaresSolver.cc  LinearSolver.cc  LinearSolverDivergedException.cc  LocalElementIterator.cc  LocalVertexIterator.cc  LocalVertexView.cc  Matrix.cc  Matrix_fwd.cc  Mesh.cc  MeshBoundaryCondition.cc  MeshDataProvider.cc  Mesh_fwd.cc  NonlinearSolver.cc  NonlinearSolverDivergedException.cc  ParallelComputePolicy.cc  ParallelComputePolicy_fwd.cc  SequentialComputePolicy.cc  SequentialComputePolicy_fwd.cc  SharedEntity.cc  TAOSolver.cc  TAOSolverDivergedException.cc  TaggedEntity.cc  TaggedVector.cc  UniqueEntity.cc  Vector.cc  Vector_fwd.cc  Viewer.cc  asHermitianTransposedMatrix.cc  asInverseMatrix.cc  asSchurComplement.cc  asThAT.cc  asTransformedMatrix.cc  asTransposedMatrix.cc  (+18 more)
cpppetsc/test/: CMakeLists.txt  IndexBasedAccessIterator_Test.cc  InvalidParametersException_Test.cc  IteratorRange_Test.cc  LeastSquaresSolver_Test.cc  LinearSolverDivergedException_Test.cc  LinearSolver_Test.cc  LocalElementIterator_Test.cc  LocalVertexIterator_Test.cc  Matrix_Test.cc  Mesh_Test.cc  NonlinearSolverDivergedException_Test.cc  NonlinearSolver_Test.cc  SharedEntity_Test.cc  TAOSolverDivergedException_Test.cc  TAOSolver_Test.cc  TaggedEntity_Test.cc  Vector_Test.cc  asHermitianTransposedMatrix_Test.cc  asInverseMatrix_Test.cc  asSchurComplement_Test.cc  asThAT_Test.cc  asTransformedMatrix_Test.cc  asTransposedMatrix_Test.cc  clone_Test.cc  computeElementsOfMatrix_Test.cc  computeSchurComplement_Test.cc  copy_Test.cc  createLhsTransform_Test.cc  createRhsTransform_Test.cc  createTransformInput_Test.cc  createTransformOutput_Test.cc  createVectorFromSource_Test.cc  multiply_Test.cc  nestMatrices_Test.cc  nestVectors_Test.cc  scalarProduct_Test.cc  setName_Test.cc  vertexDataOffsets_Test.cc
cppptest/src/: CMakeLists.txt  Matchers.cc  isLocal.cc  main.cc
cppslepc/src/: CMakeLists.txt  Context.cc  EigenPair.cc  EigenvalueSolverDivergedException.cc  InvalidEigenvalueIndexException.cc  InvalidProblemTypeException.cc  LinearEigenvalueProblemSolver.cc  NoOperatorsSetException.cc  computeEigenvalues.cc  computeSmallestEigenvalues.cc
cppslepc/test/: CMakeLists.txt  EigenvalueProblemSolverDivergedException_Test.cc  InvalidEigenvalueIndexException_Test.cc  InvalidProblemTypeException_Test.cc  LinearEigenvalueProblemSolver_Test.cc  NoOperatorsSetException_Test.cc  computeEigenvalues_Test.cc  computeSmallestEigenvalues_Test.cc  main.cc
elements/src/: AutomaticForcesTrait.cc  AutomaticStiffnessMatrixTrait.cc  Bar.cc  CMakeLists.txt  ComputeConsistentMassMatrixTrait.cc  ComputeEnergyTrait.cc  ComputeForcesTrait.cc  ComputeLumpedMassMatrixTrait.cc  ComputeMassMatrixTrait.cc  ComputeStiffnessMatrixTrait.cc  CoreElement.cc  ElementBase.cc  ElementWithMass.cc  ForceElement.cc  Minimal.cc  TimoshenkoBeamElement.cc  TimoshenkoBeamElementWithMass.cc  TwoNodeCorotationalBeam.cc  TwoNodeCorotationalBeamElement.cc  TwoNodeCorotationalBeamJHElement.cc  automatic_forces.cc  automatic_stiffness_matrix.cc  compute_consistent_mass_matrix.cc  compute_energy.cc  compute_forces.cc  compute_lumped_mass_matrix.cc  compute_mass_matrix.cc  compute_stiffness_matrix.cc
elements/test/: Bar_Test.cc  CMakeLists.txt  CoreElement_Test.cc  Element_Test.h  ForceElement_Test.cc  Minimal_Test.cc  Tensor_Test.cc  TimoshenkoBeamElementWithMass_Test.cc  TimoshenkoBeamElement_Test.cc  TwoNodeCorotationalBeamJHElement_Test.cc  TwoNodeCorotationalBeam_Test.cc
examples/: Bar.cc  Basic.cc  BlochWaveAnalysis.cc  CMakeLists.txt  CantileverBeam.cc  Cmdline.cc  CuboidMesh.cc  DynamicSolver.cc  EigenfrequencyAnalysis.cc  ForceElement.cc  GeneralizedNonlinearSolver.cc  Input.cc  MeshGeneration.cc  NonlinearBC.cc  Output.cc  PeriodicBC.cc  QuadraticTetrahedra.cc  QuadraticTriangles.cc  README.rst  SurfaceForce.cc  TimoshenkoBeam.cc  TwoNodeCorotationalBeamJH.cc
examples/meshing/: CMakeLists.txt  GradedLattice.cc  PeriodicRVEMesh.cc  PhysicalGroups.cc  SegmentMesh.cc  TwoPhaseCube.cc
meshing/src/: BoundaryRepresentation.cc  BoundingBox.cc  CMakeLists.txt  bounding_box_of.cc  construct_periodic_point_cloud.cc  construct_rectilinear_grid.cc  construct_voronoi_cell.cc
meshing/test/: BoundaryRepresentation_Test.cc  BoundingBox_Test.cc  CMakeLists.txt  bounding_box_of_Test.cc  construct_periodic_point_cloud_Test.cc  construct_rectilinear_grid_Test.cc  construct_voronoi_cell_Test.cc
solve/src/: AffineTransform.cc  CMakeLists.txt  DampingParameters.cc  DynamicSolver.cc  DynamicState.cc  GeneralizedNonlinearSolver.cc  GeneralizedTAOSolver.cc  InconsistentBoundaryConditionsException.cc  InvalidVertexException.cc  LeastSquaresSolver.cc  NewmarkParameters.cc  NonlinearSolver.cc  TAOSolver.cc  TransformingSolver.cc  (+2 more)
(+526 files in other folders)
